# counterfactual-audit-pipeline

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  PROGRESS.md  README.md  REVIEW_001_FOLLOWUPS.md  pyproject.toml
configs/: full.yaml  gcp.yaml  mvp.yaml  mvp_idw18.yaml  mvp_idw18_failingids.yaml  mvp_v2.yaml
docker/: .dockerignore  Dockerfile
gcp/: build_and_push.sh  run_on_l4.sh  setup_bucket.sh
notebooks/: 00_local_smoke.ipynb  01_databricks_ray_smoke.ipynb  01a_databricks_ray_dryrun.ipynb  02_databricks_mvp_run.ipynb  02_databricks_mvp_v2_run.ipynb  02a_databricks_mvp_smoke_36.ipynb  02b_databricks_mvp_smoke_idw18.ipynb  02c_databricks_mvp_smoke_idw18_failingids.ipynb  03_databricks_audit_analyze_viz.ipynb  04_databricks_validate_analyze_viz.ipynb  05_databricks_publish_to_hf.ipynb  06_databricks_pulid_diagnostic.ipynb  07_databricks_validate_audit_analyze_viz.ipynb  07_databricks_validate_audit_analyze_viz_v2.ipynb  08_databricks_stage_publish_to_hf.ipynb  09_databricks_prefilter_seeds.ipynb  10_databricks_balance_seeds.ipynb  11_databricks_targeted_rebalance.ipynb
plans/: 001-original-research-plan.md  002-paper-grade-architectural-fix.md  003-full-instrument-plan.md  DEVIATIONS.md
results/mvp_demo/: README.md
results/mvp_demo/analysis/: flip_rates.csv  h2_mcnemars.csv  intersectional_deepface_gender.csv  pairwise_flip_rates.csv  pairwise_per_identity_deepface_age.csv  pairwise_per_identity_deepface_gender.csv  run_manifest.json  summary.json
results/mvp_demo/audit/: run_manifest.json
results/mvp_demo/validation/: run_manifest.json  summary.json
results/mvp_demo/viz/: dashboard.html
reviews/: 001-2026-04-30-mvp-review.md  README.md
scripts/: cap_full_orchestrator.py  push.sh  run_pipeline.sh  run_pulid_diag_5am.sh  run_pulid_diag_now.sh  sync_databricks.sh
src/cap/: __init__.py
src/cap/analysis/: __init__.py  fairness_metrics.py  statistical_tests.py
src/cap/auditors/: __init__.py  arcface_local.py  aws_rekognition.py  azure_face.py  base.py  deepface_local.py  face_plus_plus.py  google_vision.py  insightface_local.py  registry.py
src/cap/cli/: analyze.py  audit.py  balance_seeds.py  generate.py  prefilter_seeds.py  targeted_rebalance.py  validate.py  visualize.py
src/cap/data/: __init__.py  fairface.py
src/cap/generator/: __init__.py  base.py  flux_pulid.py  flux_pulid_native.py  prompts.py  ray_runner.py  structural.py
src/cap/utils/: __init__.py  config.py  logging.py  run_manifest.py  seeding.py
src/cap/validator/: __init__.py  attributes.py  identity.py  quality.py
src/cap/viz/: __init__.py  cross_system.py  distributions.py  export.py  fidelity.py  interactive.py  intersectional_heatmap.py  regression.py  theme.py
tests/: test_smoke.py
